# backend/internal/model/news.go
@@ -1,0 +1,14 @@
+package model
+
+import "time"
+
+type News struct {
+	ID        int64     `json:"id"`
+	Title     string    `json:"title"`
+	Content   string    `json:"content"`
+	ImageURL  string    `json:"image_url"`
+	Tag       string    `json:"tag"`
+	AuthorID  *int64    `json:"author_id,omitempty"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
